packages/next-swc/crates/next-custom-transforms/tests/errors/server-actions/server-graph/14/input.js
'use servers'

export async function foo() {}
